--- a/app/src/main/res/layout/suolue.xml
+++ b/app/src/main/res/layout/suolue.xml
@@ -1,21 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    tools:context="com.example.smoothimagedemo.MainActivity"
+    tools:ignore="MergeRootFrame" >
 
     <GridView
-        android:id="@+id/gridView1"
-        android:layout_width="match_parent"
+        android:id="@+id/multi_photo_grid"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:numColumns="3" 
-        android:columnWidth="90dp" 
-   		android:verticalSpacing="10dp" 
-    	android:horizontalSpacing="10dp" 
-    	android:stretchMode="columnWidth" 
-    	android:gravity="center" 
-        >
-        
-    </GridView>
+        android:gravity="center"
+        android:horizontalSpacing="3dp"
+        android:listSelector="#00000000"
+        android:numColumns="3"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="3dp" />
 
-</LinearLayout>
+</FrameLayout>
